--- a/src/main/webapp/playerDetails.xhtml
+++ b/src/main/webapp/playerDetails.xhtml
@@ -6,8 +6,7 @@
       xmlns:f="http://java.sun.com/jsf/core"
 >
 <h:head/>
-<h:body>
-    <h2>#{updatePlayerDetails.player.name}</h2>
+<h:body>    <h2>#{updatePlayerDetails.player.name}</h2>
     <h:form>
         <h:outputText value="jersey number: "/>
         <h:inputText a:placeholder="enter the value" value="#{updatePlayerDetails.player.jerseyNumber}" required="true" />
