--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -3,19 +3,35 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:a="http://xmlns.jcp.org/jsf/passthrough"
 >
-<h:head/>
+<h:head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <h:outputStylesheet library="css" name="styles.css"/>
+    <title>Lab 1 | Laurynas Gailius</title>
+</h:head>
 <h:body>
-    <h2>Teams:</h2>
+    <div class="navbar">
+        <h:link outcome="index" value="Authors" styleClass="nav-link"/>
+        <h:link outcome="genres" value="Genres" styleClass="nav-link"/>
+        <h:link outcome="books" value="Books" styleClass="nav-link"/>
+    </div>
+
+    <div class="page">
+    <h2>Authors</h2>
     <ol>
-        <ui:repeat value="#{teams.allTeams}" var="team">
-            <li><h:link value="#{team.name}" outcome="players?teamId=#{team.id}" /></li>
+        <ui:repeat value="#{authors.allAuthors}" var="author">
+            <li><h:link value="#{author.name} #{author.surname}" outcome="authorDetails?authorId=#{author.id}"/></li>
         </ui:repeat>
     </ol>
-    <h:form>
-        <h:inputText value="#{teams.teamToCreate.name}" required="true" />
-        <h:commandButton value="Add new team" actionListener="#{teams.createTeam}" action="index?faces-redirect=true"/>
+
+    <h:form styleClass="add-form">
+        <h:inputText value="#{authors.authorToCreate.name}" a:placeholder="First Name" required="true" />
+        <h:inputText value="#{authors.authorToCreate.surname}" a:placeholder="Last Name" required="true" />
+        <h:commandButton styleClass="commandButton" value="Add new author" actionListener="#{authors.createAuthor}" action="index?faces-redirect=true"/>
     </h:form>
-    <h:link outcome="myBatis/teams" value="MyBatis implementation"/>
+
+    <h:link outcome="myBatis/authors" value="MyBatis implementation"/>
+    </div>
 </h:body>
 </html>
