--- a/src/main/webapp/myBatis/authorDetails.xhtml
+++ b/src/main/webapp/myBatis/authorDetails.xhtml
@@ -13,9 +13,9 @@
 </h:head>
 <h:body>
     <div class="navbar">
-        <h:link outcome="index" value="Authors" styleClass="nav-link"/>
-        <h:link outcome="genres" value="Genres" styleClass="nav-link"/>
-        <h:link outcome="books" value="Books" styleClass="nav-link"/>
+        <h:link outcome="/index" value="Authors" styleClass="nav-link"/>
+        <h:link outcome="/genres" value="Genres" styleClass="nav-link"/>
+        <h:link outcome="/books" value="Books" styleClass="nav-link"/>
     </div>
 
     <div class="page">
